--- a/webapp/style.css
+++ b/webapp/style.css
@@ -7,7 +7,8 @@ html, body, #map {
 }
 div#search{
   position: absolute;
-  top: 20px;
-  right: 20px;
-  
+  top: 40px;
+  left: 50%;
+  margin-left: -200px; 
+  width: 400px;
 }
