Alerts added when no network for the place is found

--- a/webapp/style.css
+++ b/webapp/style.css
@@ -27,6 +27,7 @@ div#alert {
   -webkit-border-radius: 8px;
   -moz-border-radius: 8px;
   border-radius: 8px;
+  display: none;
 }
 
 /* scaffolding */
